# picachooser

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.rst  MANIFEST.in  PICAchooser_docker  README.md  README.rst  TODO.md  VERSION  builddocker.sh  cleandirs  condasetup  dockershell.sh  grades1.txt  grades2.csv  grades4.csv  newrelease_todo  pyproject.toml  refresh  requirements.txt  setup.cfg  setup.py  testdocker.sh  testdocker2.sh  testnextinlist  testrun  testrun2  testrun3  testrun4  versioneer.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docker-build-latest.yml  docker-build-on-release.yml  python-publish.yml  showversion.yml
PICAchooser/: LightboxItem.py  PICAchooserTemplate.py  PICAchooserTemplate.ui  _gittag.py  colormaps.py  fit.py  stats.py  version.py
PICAchooser/scripts/: PICAchooser  grader
dockerbuild/: PICAchooser_docker  build.sh  containerops  test.sh
docs/: Makefile  conf.py  contents.rst  contributing.rst  index.rst  make.bat  requirements.txt  usage.rst  whats_new.rst
docs/auto_examples/: index.rst
examples/: README.rst
grader/: LightboxItem.py  _gittag.py  aromaviewTemplate.py  aromaviewTemplate.ui  version.py
grader/scripts/: aroma_grader  grader
picachooser/: LightboxItem.py  _gittag.py  _version.py  colormaps.py  fit.py  graderTemplate.py  graderTemplate.ui  graderTemplate_qt6.py  io.py  melodicompTemplate.py  melodicompTemplate.ui  melodicompTemplate_qt6.py  picachooserTemplate.py  picachooserTemplate.ui  picachooserTemplate_qt6.py  picachooser_imonlyTemplate.py  picachooser_imonlyTemplate.ui  picachooser_imonlyTemplate_qt6.py  picachooser_imonlyaltTemplate.py  picachooser_imonlyaltTemplate.ui  picachooseraltTemplate.py  picachooseraltTemplate.ui  rtgraderTemplate.py  rtgraderTemplate.ui  rtgraderTemplate_qt6.py  stats.py  util.py  version.py
picachooser/scripts/: PICAchooser  PICAchooser.py  PICAchooser_dispatcher  PICAchooser_dispatcher.py  grader  grader.py  melodicomp  melodicomp.py  rtgrader  rtgrader.py
