[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
description_file = README.rst

[versioneer]
VCS = git
style = pep440
versionfile_source = picachooser/_version.py
versionfile_build = picachooser/_version.py
tag_prefix = v
parentdir_prefix =

[flake8]
max-line-length = 99
exclude =
    *build/
    _version.py
putty-ignore =
    */__init__.py : +F401
ignore =
    E203
    E402
    E501
    E722
    W503
